--- a/industrial_boiler.html
+++ b/industrial_boiler.html
@@ -1,54 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boiler MCQ Quiz</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f7f9;
-      padding: 20px;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: linear-gradient(to right, #f8ffae, #43c6ac);
+      color: #333;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
     h1 {
       text-align: center;
+      color: #1e88e5;
+      margin-bottom: 0.5rem;
     }
+
+    h2 {
+      text-align: center;
+      color: #d81b60;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+
     .quiz-container {
-      max-width: 800px;
-      margin: auto;
+      max-width: 900px;
       background: #fff;
-      padding: 20px;
+      padding: 2rem;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      margin-bottom: 2rem;
     }
+
+    .progress-bar {
+      width: 100%;
+      height: 10px;
+      background: #eee;
+      border-radius: 5px;
+      margin-bottom: 1rem;
+      overflow: hidden;
+    }
+
+    .progress {
+      height: 100%;
+      background: #42a5f5;
+      transition: width 0.3s;
+    }
+
+    #timer {
+      text-align: right;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      color: #d81b60;
+    }
+
     .question {
-      margin-bottom: 20px;
+      margin-bottom: 1.5rem;
+      animation: fadeIn 0.5s;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 1rem;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
     .question p {
       font-weight: bold;
+      font-size: 1.1rem;
+      color: #444;
     }
+
     .options button {
       display: block;
+      margin: 0.5rem 0;
+      padding: 0.75rem 1rem;
       width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      border: 1px solid #ccc;
+      background: #e3f2fd;
+      border: none;
       border-radius: 5px;
-      background: #eee;
       cursor: pointer;
+      transition: all 0.3s;
+      font-size: 1rem;
+      text-align: left;
     }
+
+    .options button:hover {
+      background: #bbdefb;
+      transform: translateX(5px);
+    }
+
+    .options button:focus {
+      outline: 2px solid #1e88e5;
+      outline-offset: 2px;
+    }
+
     .options button.correct {
-      background-color: #c8f7c5;
+      background-color: #c8e6c9 !important;
+      animation: pulse 0.5s;
     }
+
     .options button.wrong {
-      background-color: #f7c5c5;
+      background-color: #ffcdd2 !important;
+      animation: shake 0.3s;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
+    }
+
+    #score, #results {
+      text-align: center;
+      font-size: 1.2rem;
+      margin-top: 2rem;
+      font-weight: bold;
+    }
+
+    .results-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+
+    .results-table th, .results-table td {
+      border: 1px solid #ddd;
+      padding: 0.5rem;
+      text-align: left;
+    }
+
+    .results-table th {
+      background: #f5f5f5;
+    }
+
+    .submit-button, .restart-button {
+      background: #42a5f5;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 1rem;
+      display: block;
+      width: 100%;
+      text-align: center;
+      transition: background 0.3s;
+    }
+
+    .submit-button:hover, .restart-button:hover {
+      background: #1e88e5;
+    }
+
+    .submit-button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    @media (max-width: 600px) {
+      .quiz-container {
+        padding: 1rem;
+      }
+      .options button {
+        font-size: 0.9rem;
+        padding: 0.5rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Boiler MCQ Quiz (30 Questions)</h1>
-  <H2> 3 MCQs WILL COME IN EXAM</H2>
-  <div class="quiz-container" id="quiz"></div>
+  <h1>Boiler MCQ Quiz (50 Questions)</h1>
+  <h2>3 MCQs Will Come in Exam</h2>
+  <div class="quiz-container">
+    <div id="timer">Time: 00:00</div>
+    <div class="progress-bar">
+      <div class="progress" id="progress"></div>
+    </div>
+    <div id="quiz"></div>
+    <button class="submit-button" id="submit-button" disabled>Submit Quiz</button>
+    <div id="score"></div>
+    <div id="results" class="hidden">
+      <h2>Quiz Results</h2>
+      <table class="results-table">
+        <thead>
+          <tr>
+            <th>Question</th>
+            <th>Your Answer</th>
+            <th>Correct Answer</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="results-body"></tbody>
+      </table>
+    </div>
+  </div>
+  <button class="restart-button hidden" id="restart-button">Restart Quiz</button>
+
+  <audio id="correct-sound" src="https://www.soundjay.com/buttons/beep-01a.mp3"></audio>
+  <audio id="wrong-sound" src="https://www.soundjay.com/buttons/beep-02.mp3"></audio>
 
   <script>
     const boilerQuestions = [
@@ -102,42 +269,183 @@
       { q: "Maximum pressure at which steam can be raised in a boiler:", options: ["150 psi", "250 psi"], answer: 0 },
       { q: "Which of the following is a water tube boiler?", options: ["Lancashire boiler", "Babcock and Wilcox boiler"], answer: 1 },
       { q: "The device attached to the steam chest for preventing explosions due to excessive internal pressure of steam is called:", options: ["Water level indicator", "Safety valve"], answer: 1 },
-      { q: "A valve installed between the boiler and the feed pump is:", options: ["Blow off cock", "Water level indicator"], answer: 0 },
+      { q: "A valve installed between the boiler and the feed pump is:", options: ["Blow off cock", "Water level indicator"], answer: 0 }
     ];
 
+    let score = 0;
+    let userAnswers = Array(boilerQuestions.length).fill(null);
+    let timerSeconds = 0;
+    let timerInterval;
 
-    const quizContainer = document.getElementById("quiz");
+    const quizEl = document.getElementById("quiz");
+    const scoreEl = document.getElementById("score");
+    const resultsEl = document.getElementById("results");
+    const resultsBody = document.getElementById("results-body");
+    const progressEl = document.getElementById("progress");
+    const timerEl = document.getElementById("timer");
+    const submitButton = document.getElementById("submit-button");
+    const restartButton = document.getElementById("restart-button");
+    const correctSound = document.getElementById("correct-sound");
+    const wrongSound = document.getElementById("wrong-sound");
 
-    boilerQuestions.forEach((q, index) => {
-      const wrapper = document.createElement("div");
-      wrapper.className = "question";
+    // Load progress from localStorage
+    function loadProgress() {
+      const saved = localStorage.getItem("boilerMCQQuizProgress");
+      if (saved) {
+        const { score: savedScore, answers: savedAnswers, time: savedTime } = JSON.parse(saved);
+        score = savedScore || 0;
+        userAnswers = savedAnswers && savedAnswers.length === boilerQuestions.length ? savedAnswers : Array(boilerQuestions.length).fill(null);
+        timerSeconds = savedTime || 0;
+      } else {
+        score = 0;
+        userAnswers = Array(boilerQuestions.length).fill(null);
+        timerSeconds = 0;
+      }
+    }
 
-      const question = document.createElement("p");
-      question.innerText = `${index + 1}. ${q.q}`;
-      wrapper.appendChild(question);
+    // Save progress to localStorage
+    function saveProgress() {
+      localStorage.setItem("boilerMCQQuizProgress", JSON.stringify({
+        score,
+        answers: userAnswers,
+        time: timerSeconds
+      }));
+    }
 
-      const optionsDiv = document.createElement("div");
-      optionsDiv.className = "options";
-
-      q.options.forEach((opt, i) => {
-        const btn = document.createElement("button");
-        btn.innerText = opt;
-        btn.onclick = () => {
-          const allButtons = optionsDiv.querySelectorAll("button");
-          allButtons.forEach(b => b.disabled = true);
-          if (i === q.answer) {
-            btn.classList.add("correct");
-          } else {
-            btn.classList.add("wrong");
-            allButtons[q.answer].classList.add("correct");
-          }
+    // Shuffle options
+    function shuffleOptions(questions) {
+      return questions.map(q => {
+        const correct = q.options[q.answer];
+        const shuffled = [...q.options].sort(() => Math.random() - 0.5);
+        return {
+          q: q.q,
+          options: shuffled,
+          answer: shuffled.indexOf(correct)
         };
-        optionsDiv.appendChild(btn);
+      });
+    }
+
+    // Start timer
+    function startTimer() {
+      const minutes = Math.floor(timerSeconds / 60);
+      const seconds = timerSeconds % 60;
+      timerEl.textContent = `Time: ${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+      
+      timerInterval = setInterval(() => {
+        timerSeconds++;
+        const minutes = Math.floor(timerSeconds / 60);
+        const seconds = timerSeconds % 60;
+        timerEl.textContent = `Time: ${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+      }, 1000);
+    }
+
+    // Update progress bar
+    function updateProgress() {
+      const answered = userAnswers.filter(answer => answer !== null).length;
+      const percentage = (answered / boilerQuestions.length) * 100;
+      progressEl.style.width = `${percentage}%`;
+      checkAllAnswered();
+    }
+
+    // Show all questions
+    function showQuestions() {
+      let html = '';
+      for (let i = 0; i < boilerQuestions.length; i++) {
+        const q = shuffledQuestions[i];
+        const options = q.options
+          .map((opt, j) => `<button aria-label="Option ${opt}" onclick="checkAnswer(this, ${i}, ${j}, '${opt.replace(/'/g, "\\'")}')">${opt}</button>`)
+          .join('');
+        html += `
+          <div class="question" data-index="${i}">
+            <p>${i + 1}. ${q.q}</p>
+            <div class="options">${options}</div>
+          </div>
+        `;
+      }
+      quizEl.innerHTML = html;
+      updateProgress();
+    }
+
+    // Check answer
+    function checkAnswer(button, questionIndex, selected, selectedText) {
+      const q = shuffledQuestions[questionIndex];
+      const correct = q.answer;
+      const buttons = button.parentElement.querySelectorAll("button");
+      buttons.forEach((btn) => {
+        btn.disabled = true;
+        if (q.options.indexOf(btn.innerText) === correct) btn.classList.add("correct");
+        if (btn === button && selected !== correct) btn.classList.add("wrong");
       });
 
-      wrapper.appendChild(optionsDiv);
-      quizContainer.appendChild(wrapper);
-    });
+      userAnswers[questionIndex] = selectedText;
+      if (selected === correct) {
+        score++;
+        correctSound.play().catch(() => console.log("Audio playback failed"));
+      } else {
+        wrongSound.play().catch(() => console.log("Audio playback failed"));
+      }
+
+      saveProgress();
+      updateProgress();
+    }
+
+    // Check if all questions are answered to enable submit button
+    function checkAllAnswered() {
+      const allAnswered = userAnswers.every(answer => answer !== null);
+      submitButton.disabled = !allAnswered;
+    }
+
+    // End quiz and show results
+    function endQuiz() {
+      clearInterval(timerInterval);
+      quizEl.innerHTML = "";
+      submitButton.classList.add("hidden");
+      scoreEl.innerHTML = `Your score: ${score} / ${boilerQuestions.length} (${((score / boilerQuestions.length) * 100).toFixed(2)}%)`;
+      resultsEl.classList.remove("hidden");
+      restartButton.classList.remove("hidden");
+
+      resultsBody.innerHTML = shuffledQuestions.map((q, i) => {
+        const userAnswer = userAnswers[i] === null ? "Not attempted" : userAnswers[i];
+        const correctAnswer = q.options[q.answer];
+        const status = userAnswers[i] === q.options[q.answer] ? "Correct" :
+                      userAnswers[i] === null ? "Not attempted" : "Wrong";
+        return `
+          <tr>
+            <td>${i + 1}. ${q.q}</td>
+            <td>${userAnswer}</td>
+            <td>${correctAnswer}</td>
+            <td class="${status.toLowerCase()}">${status}</td>
+          </tr>
+        `;
+      }).join('');
+
+      // Clear localStorage
+      localStorage.removeItem("boilerMCQQuizProgress");
+    }
+
+    // Restart quiz
+    function restartQuiz() {
+      score = 0;
+      userAnswers = Array(boilerQuestions.length).fill(null);
+      timerSeconds = 0;
+      shuffledQuestions = shuffleOptions(boilerQuestions);
+      resultsEl.classList.add("hidden");
+      restartButton.classList.add("hidden");
+      submitButton.classList.remove("hidden");
+      scoreEl.innerHTML = "";
+      startTimer();
+      showQuestions();
+    }
+
+    // Initialize
+    let shuffledQuestions = shuffleOptions(boilerQuestions);
+    loadProgress();
+    startTimer();
+    showQuestions();
+
+    // Add event listeners
+    submitButton.addEventListener("click", endQuiz);
+    restartButton.addEventListener("click", restartQuiz);
   </script>
 </body>
 </html>
