--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@
         </div> -->
     </div>
 
+    <iframe src="2nd-paper-solution.pdf" width="100%" height="600px">
+    This browser does not support PDFs. Please download the PDF to view it: 
+    <a href="2nd-paper-solution.pdf">Download PDF</a>.
+</iframe>
+
     <div class="exam-tips">
         <h3>Exam Preparation Tips</h3>
         <ul>
