--- a/index.html
+++ b/index.html
@@ -357,6 +357,10 @@
             <a href="2081-gm.html">2081 butwal GM PAPER 50 MCQs</a>
             <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
         </div>
+         <div class="card">
+            <a href="2078-gm.html">2078 GM PAPER 50 MCQs</a>
+            <span class="tooltip"> MECHA MCQS </span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
