--- a/index.html
+++ b/index.html
@@ -361,6 +361,10 @@
             <a href="2078-gm.html">2078 GM PAPER 50 MCQs</a>
             <span class="tooltip"> MECHA MCQS </span>
         </div>
+        <div class="card">
+            <a href="2077-gm.html">2077 GM PAPER 50 MCQs</a>
+            <span class="tooltip"> MECHA MCQS </span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
