--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
             <a href="2077-gm.html">2077 GM PAPER 50 MCQs</a>
             <span class="tooltip"> MECHA MCQS </span>
         </div>
+         <div class="card">
+            <a href="2076-gm.html">2076 and other remaining Numeric Important  GM PAPER 58 MCQs</a>
+            <span class="tooltip">2076 amnd other remaining Numeric Important </span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
