--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
             <a href="units-topics.html">All topics with their IMPORTANT SI FPS CGS units </a>
             <span class="tooltip">Important SI FPS CGS UNITS OF TOPIC </span>
         </div>
+
+        <div class="card">
+            <a href="publics.html"> latest public management and GK aako ques </a>
+            <span class="tooltip"> latest public management and GK aako ques</span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
