--- a/index.html
+++ b/index.html
@@ -351,7 +351,10 @@
             <a href="second-paper.html">Second Paper short question each with ans</a>
             <span class="tooltip">Second Paper  short question each with ans</span>
         </div>
-        
+            <div class="card">
+            <a href="2082-gm.html">2082 butwal GM PAPER 50 MCQs</a>
+            <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
+        </div>
 
           <div class="card">
             <a href="2081-gm.html">2081 butwal GM PAPER 50 MCQs</a>
