--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <span class="tooltip">Second Paper  short question each with ans</span>
         </div>
             <div class="card">
-            <a href="2082-gm.html">2082 butwal GM PAPER 50 MCQs</a>
+            <a href="2082-gm.html">2082 latest butwal GM PAPER 50 MCQs</a>
             <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
         </div>
 
