--- a/index.html
+++ b/index.html
@@ -455,6 +455,13 @@
         </div> -->
     </div>
 
+      <div class="container" id="IQ MCQS" style="display: none;">
+        <div class="card">
+            <a href="iq-3.1.html">IQ VERVAL 1 — 50 MCQs</a>
+            <span class="tooltip">Full IQ practice</span>
+        </div>
+            </div>
+
     <p>Here is the explanation in PDF of every topic of GM for 2nd paper</p>
     <iframe src="2nd-paper-solution.pdf" width="100%" height="600px">
     This browser does not support PDFs. Please download the PDF to view it: 
