--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
     <div class="tabs">
         <div class="tab active" data-section="topics" onclick="showSection('topics')">Topic-Wise MCQs</div>
         <div class="tab" data-section="mock-tests" onclick="showSection('mock-tests')">Mock Tests</div>
+
+            <div class="tab" data-section="IQ TEST" onclick="showSection('IQ-MCQS')">IQ TEST</div>
     </div>
 
     <div class="container" id="topics">
@@ -455,7 +457,7 @@
         </div> -->
     </div>
 
-      <div class="container" id="IQ MCQS" style="display: none;">
+      <div class="container" id="IQ-MCQS" style="display: none;">
         <div class="card">
             <a href="iq-3.1.html">IQ VERVAL 1 — 50 MCQs</a>
             <span class="tooltip">Full IQ practice</span>
