--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="tab active" data-section="topics" onclick="showSection('topics')">Topic-Wise MCQs</div>
         <div class="tab" data-section="mock-tests" onclick="showSection('mock-tests')">Mock Tests</div>
 
-            <div class="tab" data-section="IQ TEST" onclick="showSection('IQ-MCQS')">IQ TEST</div>
+            <div class="tab" data-section="IQ-TEST" onclick="showSection('IQ-MCQS')">IQ TEST</div>
     </div>
 
     <div class="container" id="topics">
