--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
         <div class="tab" data-section="mock-tests" onclick="showSection('mock-tests')">Mock Tests</div>
 
             <div class="tab" data-section="IQ-TEST" onclick="showSection('IQ-MCQS')">IQ TEST</div>
+          <div class="tab" data-section="Public-gk" onclick="showSection('Public-gk')">Public GK IQ ENG NEP</div>
     </div>
 
     <div class="container" id="topics">
@@ -464,6 +465,16 @@
         </div>
             <div class="card">
             <a href="iq-3.2.html">IQ VERVAL NOT 1 — 50 MCQs</a>
+            <span class="tooltip">Full IQ practice</span>
+        </div>
+     </div>
+   <div class="container" id="public-gk" style="display: none;">
+        <div class="card">
+            <a href="english.html">English mcq mock test</a>
+            <span class="tooltip">Full IQ practice</span>
+        </div>
+            <div class="card">
+            <a href="nepali.html"> Nepali mcq mock test</a>
             <span class="tooltip">Full IQ practice</span>
         </div>
      </div>
