--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <span class="tooltip">Full IQ practice</span>
         </div>
      </div>
-   <div class="container" id="public-gk" style="display: none;">
+   <div class="container" id="Public-gk" style="display: none;">
         <div class="card">
             <a href="english.html">English mcq mock test</a>
             <span class="tooltip">Full IQ practice</span>
