--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
             <a href="iq-3.1.html">IQ VERVAL 1 — 90 MCQs</a>
             <span class="tooltip">Full IQ practice</span>
         </div>
+            
             <div class="card">
             <a href="iq-3.2.html">IQ VERVAL NOT 1 — 50 MCQs</a>
             <span class="tooltip">Full IQ practice</span>
@@ -450,6 +451,12 @@
             <a href="nepali.html"> Nepali mcq mock test</a>
             <span class="tooltip">Full IQ practice</span>
         </div>
+
+        <div class="card">
+            <a href="public2.html">Public mang ,gk mcqs</a>
+            <span class="tooltip">Public mang ,gk mcqs</span>
+        </div>
+       
          <div class="card">
             <a href="publics.html"> latest public management and GK aako ques </a>
             <span class="tooltip"> latest public management and GK aako ques</span>
