--- a/index.html
+++ b/index.html
@@ -347,6 +347,15 @@
             <a href="second-paper.html">Second Paper short question each with ans</a>
             <span class="tooltip">Second Paper short question each with ans</span>
         </div>
+         <div class="card">
+            <a href="2082-gm.html">2082 latest butwal GM PAPER 50 MCQs</a>
+            <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
+        </div>
+
+        <div class="card">
+            <a href="2081-gm.html">2081 butwal GM PAPER 50 MCQs</a>
+            <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
+        </div>
         <div class="card">
             <a href="2078-gm.html">2078 GM PAPER 50 MCQs</a>
             <span class="tooltip"> MECHA MCQS </span>
@@ -441,13 +450,30 @@
 
     <div class="container" id="IQ-MCQS" style="display: none;">
         <div class="card">
-            <a href="iq-3.1.html">IQ VERVAL 1 — 90 MCQs</a>
-            <span class="tooltip">Full IQ practice</span>
+            <a href="iq-3.1.html">3.1. Verbal Aptitude Test: IQ — 90 MCQs</a>
+            <span class="tooltip">vocabulary, 
+sequence, 
+analogy, 
+classification, 
+coding-decoding, 
+distance and direction,
+ logical reasoning, 
+ranking and order, </span>
         </div>
 
         <div class="card">
-            <a href="iq-3.2.html">IQ VERVAL NOT 1 — 50 MCQs</a>
-            <span class="tooltip">Full IQ practice</span>
+            <a href="iq-3.2.html">IQ Numerical Aptitude Test 132 MCQs</a>
+            <span class="tooltip">sequence, 
+analogy, 
+classification, 
+coding, 
+matrix, 
+arithmetic reasoning/operations, 
+percentage, 
+profit and loss, 
+ratio, 
+average, 
+time and work, </span>
         </div>
     </div>
     <div class="container" id="Public-gk" style="display: none;">
@@ -470,15 +496,7 @@
             <span class="tooltip"> latest public management and GK aako ques</span>
         </div>
 
-        <div class="card">
-            <a href="2082-gm.html">2082 latest butwal GM PAPER 50 MCQs</a>
-            <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
-        </div>
-
-        <div class="card">
-            <a href="2081-gm.html">2081 butwal GM PAPER 50 MCQs</a>
-            <span class="tooltip">GK,PUBLIC AND MECHA MCQS </span>
-        </div>
+       
 
         <div class="card">
             <a href="public-management.html">Public management summerized(10*2 Marks=20marks)</a>
