--- a/index.html
+++ b/index.html
@@ -452,28 +452,37 @@
         <div class="card">
             <a href="iq-3.1.html">3.1. Verbal Aptitude Test: IQ — 90 MCQs</a>
             <span class="tooltip">vocabulary, 
-sequence, 
-analogy, 
-classification, 
-coding-decoding, 
-distance and direction,
- logical reasoning, 
-ranking and order, </span>
+                                    sequence, 
+                                    analogy, 
+                                    classification, 
+                                    coding-decoding, 
+                                    distance and direction,
+                                     logical reasoning, 
+                                    ranking and order, </span>
         </div>
 
         <div class="card">
             <a href="iq-3.2.html">IQ Numerical Aptitude Test 132 MCQs</a>
             <span class="tooltip">sequence, 
-analogy, 
-classification, 
-coding, 
-matrix, 
-arithmetic reasoning/operations, 
-percentage, 
-profit and loss, 
-ratio, 
-average, 
-time and work, </span>
+                                    analogy, 
+                                    classification, 
+                                    coding, 
+                                    matrix, 
+                                    arithmetic reasoning/operations, 
+                                    percentage, 
+                                    profit and loss, 
+                                    ratio, 
+                                    average, 
+                                    time and work, </span>
+        </div>
+
+          <div class="card">
+            <a href="iq-3.2.2.html">IQ Numerical Aptitude Test 75 MCQs</a>
+            <span class="tooltip"> percentage, 
+                                  profit and loss, 
+                                  ratio, 
+                                  average, 
+                                  time and work,</span>
         </div>
     </div>
     <div class="container" id="Public-gk" style="display: none;">
