--- a/index.html
+++ b/index.html
@@ -486,41 +486,41 @@
         </div>
     </div>
     <div class="container" id="Public-gk" style="display: none;">
+         <div class="card">
+            <a href="public-management.html">Public management summarized Notes (10*2 Marks=20marks)</a>
+            <span class="tooltip">FOMULA MCQs simulation</span>
+        </div>
+        
         <div class="card">
-            <a href="english.html">English mcq mock test</a>
+            <a href="english.html"> Bagmati - English MCQ Mock-Test </a>
             <span class="tooltip">Full IQ practice</span>
         </div>
         <div class="card">
-            <a href="nepali.html"> Nepali mcq mock test</a>
+            <a href="nepali.html">Bagmati -  Nepali MCQ Mock-Test</a>
             <span class="tooltip">Full IQ practice</span>
         </div>
 
         <div class="card">
-            <a href="public2.html">Public mang ,gk mcqs</a>
+            <a href="public2.html">Public Management & GK Mock-Test 1</a>
             <span class="tooltip">Public mang ,gk mcqs</span>
         </div>
 
         <div class="card">
-            <a href="publics.html"> latest public management and GK aako ques </a>
+            <a href="publics.html"> Latest Public Management & GK Mock-Test 2 </a>
             <span class="tooltip"> latest public management and GK aako ques</span>
         </div>
 
        
-
         <div class="card">
-            <a href="public-management.html">Public management summerized(10*2 Marks=20marks)</a>
-            <span class="tooltip">FOMULA MCQs simulation</span>
+            <a href="public-mock.html">Public management MCQs(84 MCQs)</a>
+            <span class="tooltip">84 MCQS FOR PUBLIC MAMNAGEMENT</span>
         </div>
         <div class="card">
-            <a href="public-mock.html">Public management MCQs( 84 MCQs)</a>
-            <span class="tooltip">FOMULA MCQs simulation</span>
-        </div>
-        <div class="card">
-            <a href="gk.html">GK MCQs (66 MCQs)</a>
+            <a href="gk.html">GK MCQs ONLY SET-1 (66 MCQs)</a>
             <span class="tooltip">GK 66 MCQS</span>
         </div>
         <div class="card">
-            <a href="gk1.html">GK MCQs (33 MCQs)</a>
+            <a href="gk1.html">GK MCQs ONLY SET-2 (33 MCQs)</a>
             <span class="tooltip">GK 33 MCQS LISTED</span>
         </div>
     </div>
