--- a/index.html
+++ b/index.html
@@ -334,6 +334,10 @@
             <a href="applied_mechanics.html">8. Applied Mechanics — 141 MCQs</a>
             <span class="tooltip">Statics, kinematics, dynamics, torque</span>
         </div>
+         <div class="card">
+            <a href="fluid-som.html">9. Fluid and Som for TU only </a>
+            <span class="tooltip">Fluid Mechanics</span>
+        </div>
         <div class="card">
             <a href="formula.html">Formula Cheat Sheet</a>
             <span class="tooltip">All key formulas for quick review</span>
