--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
        
         <div class="card">
-            <a href="public-mock.html">Public management MCQs(84 MCQs)</a>
+            <a href="public-mock.html">Public management MCQs all topic wise (84 MCQs)</a>
             <span class="tooltip">84 MCQS FOR PUBLIC MAMNAGEMENT</span>
         </div>
         <div class="card">
